# ao3_parser_api

./: .gitignore  example.html  pyproject.toml
data/: fics_db.db  fics_db.json
example_files/: 1_site_screen_.css
src/ao3_parser_api/: __init__.py  __main__.py  config.py  datatype.py  fetcher.py  parser.py  saver.py
